--- a/templates/editar-producto.html
+++ b/templates/editar-producto.html
@@ -10,7 +10,7 @@
         <input type="text" id="codigo" name="codigo" value="{{results[1]}}" readonly=true >
         <br>
         <label for="precio">Precio:</label>
-        <input type="number" id="precio" name="precio">
+        <input type="number" id="precio" value="{{results[2]}}" name="precio">
         <br>
         <label for="disponible">Disponible:</label>
         <input type="checkbox" id="disponible" name="disponible">
