--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
     <title>Inventario de Productos</title>
 </head>
 <body>
@@ -39,7 +43,7 @@
                     <input type="submit" value="editar">
                 </form>
 
-                <form action="{{ url_for('eliminar_producto', id=row[0]) }}" method="post" style="display: inline;">
+                <form action="{{ url_for('eliminar_producto', id=row[0]) }}" method="get" style="display: inline;">
                     <input type="submit" value="Eliminar">
                 </form>
             </td>
